// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCardMeta renders full blog card meta 1`] = `
<div
  className="jsx-3343601279 card-meta"
>
  <div
    className="jsx-3343601279 authors"
  >
    <span
      className="jsx-3343601279"
    >
      by
    </span>
    <span
      className="jsx-3343601279 author"
    >
      test-name
    </span>
  </div>
  <div
    className="jsx-3343601279 publish-data"
  >
    <span
      className="jsx-3343601279 publish-date"
    >
      August 13, 2019
    </span>
    undefined minutes
  </div>
</div>
`;

exports[`BlogCardMeta renders full blog card meta with multiple authors 1`] = `
<div
  className="jsx-3343601279 card-meta"
>
  <div
    className="jsx-3343601279 authors"
  >
    <span
      className="jsx-3343601279"
    >
      by
    </span>
    <span
      className="jsx-3343601279 author"
    >
      test-name
    </span>
    <span
      className="jsx-3343601279 author"
    >
      test-name-2
    </span>
  </div>
  <div
    className="jsx-3343601279 publish-data"
  >
    <span
      className="jsx-3343601279 publish-date"
    >
      August 13, 2019
    </span>
    undefined minutes
  </div>
</div>
`;
